test/reject/09-bad-class-modifier.puml
@startuml

class abstract Potato {
    
}

@enduml